# starter-imgui-qt

./: CMakeLists.txt  README.md  appveyor.yml  codecov.yml  config.sh
m3rdparty/: list.cmake  m3rdparty.h
mcommon/: finutils.h  list.cmake  mcommon.h  timeutils.h
mcommon/file/: fileutils.cpp  fileutils.h  media_manager.cpp  media_manager.h  mfilesystem.h
mcommon/math/: mathutils.h
mcommon/string/: stringutils.cpp  stringutils.h  stringutils.test.cpp
mcommon/ui/: uimanager.cpp
scripts/: travis_script.sh
src/: list.cmake
src/app/: list.cmake
src/app/imgui/: display_imgui.cpp  display_imgui.h  list.cmake  main-imgui.cpp
src/app/qt/: common_qt.cpp  common_qt.h  display_qt.cpp  display_qt.h  list.cmake  main-qt.cpp  mainwindow.cpp  mainwindow.h  window_qt.cpp  window_qt.h
src/lib/: controller.cpp  controller.h  display.h  list.cmake
src/tests/: list.cmake
